# HeiQ-Thermodynamical-Analysis

./: .gitignore  README.md  pyproject.toml
docs/: model27_two_sided_membrane_balance.md  model2_application_scaling.md  model2_combined_feasibility.md  model2_decision_tables.md  model2_portfolio_and_model3_targets.md  model2_scenario_sweep.md  model2_sorption_heat_balance.md  model_notes.md  model_roadmap.md  pre_enthalpy_drop_model.md  wp1_decision_memo.md  wp1_material_decision_memo.md  wp1_simple_calculations.tex  wp1_simple_tables.tex
scenarios/: climate_scenarios.yaml  first_model.yaml  nafion_literature_priors.yaml  small_airflow.yaml  two_sided_membrane_notes.yaml
scripts/: make_application_decision_tables.py  make_decision_summary.py  make_model2_portfolio_summary.py  run_model1_robustness.py  run_model27_two_sided_membrane_balance.py  run_model2_area_flux_screen.py  run_model2_combined_feasibility.py  run_model2_load_area_scaling.py  run_model2_scenario_sweep.py  run_model2_sorption_heat_balance.py  run_model3_transport_targets.py  run_pre_enthalpy_drop_model.py  run_reheat_and_thresholds.py  run_wp1_material_requirements.py  run_wp1_simple_calculations.py  run_wp1_stage_gate_summary.py  write_wp1_decision_memo.py  write_wp1_material_decision_memo.py
src/heiq_thermo/: __init__.py  ac_eo.py  cli.py  cop.py  model.py  plots.py  processes.py  psychrometrics.py
tests/: test_ac_eo.py  test_psychrometrics.py
